@@ -1,4 +1,0 @@
-%% This file is not generated by configure, because then the provided
-%% pdf files would always appear out-of-date.
-\def\versionemacs{25}           % major version of emacs
-\def\year{2014}                 % latest copyright year
