@@ -1,5 +1,8 @@
 2014-11-10  Glenn Morris  <rgm@gnu.org>
 
+	* admin.el (set-version): No need to update etc/refcards/emacsver.tex.
+	(set-copyright): Update etc/refcards/emacsver.tex.in.
+
 	* admin.el (set-version): No need to update doc/emacs/emacsver.texi.
 	(make-manuals-dist-output-variables): Add top_srcdir.
 	(make-manuals-dist--1): Handle @version@ specially.
